@@ -337,6 +337,21 @@ class sqlparser_general_testcase extends BaseTestCase {
 		$this->assertEquals($expected, $select);
 	}
 
+	/**
+	 * @test
+	 * @see http://bugs.typo3.org/view.php?id=14456
+	 */
+	public function canParseAlterEngineStatement() {
+		$parseString = 'ALTER TABLE tx_realurl_pathcache ENGINE=InnoDB';
+		$components = $this->fixture->_callRef('parseALTERTABLE', $parseString);
+
+		$this->assertTrue(is_array($components), $components);
+		$alterTable = $this->cleanSql($this->fixture->_callRef('compileALTERTABLE', $components));
+		$expected = 'ALTER TABLE tx_realurl_pathcache ENGINE = InnoDB';
+		$this->assertTrue(is_array($alterTable), $alterTable);
+		$this->assertEquals($expected, $alterTable[0]);
+	}
+
 	///////////////////////////////////////
 	// Tests concerning JOINs
 	///////////////////////////////////////
